<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_homeiconsvg"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_pebbles"
        android:icon="@drawable/ic_messageiconsvg"
        android:title="@string/pebbles" />
    <item
        android:id="@+id/navigation_create"
        android:icon="@drawable/ic_createiconsvg"
        android:title="@string/create"/>

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notificationiconsvg"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profileiconsvg"
        android:title="@string/profile"/>


</menu>